fix: alignment

--- a/src/app/home/header/header.component.scss
+++ b/src/app/home/header/header.component.scss
@@ -10,7 +10,7 @@
   right: 0;
   top: 0;
   width: 100%;
-  padding: 30px 80px;
+  padding: 30px 132px;
 }
 
 @media (max-width: 768px) {
